added hero section

--- a/index.html
+++ b/index.html
@@ -122,16 +122,8 @@
                         </span>
                     </button>
                 </div>
-                <div class="header__search">
-                    <input class="header__search-input" type="text" placeholder="искать в каталоге">
-                    <button class="header__search-button">
-                        <div class="header__search-button-arrow-svg">
-                            <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M9.82813 14L16.8281 7L9.82813 2.38419e-07L8.625 1.20313L13.5781 6.14062H0.75V7.85938H13.5781L8.625 12.8125L9.82813 14Z" fill="#E03226"/>
-                            </svg>
-                        </div>
-                    </button>
-                </div>
+            </div>
+            <div class="header__bottom-content">
                 <div class="header__catalog">
                     <button class="header__catalog-button">
                         КАТАЛОГ ПРОДУКЦИИ
@@ -145,9 +137,178 @@
                         </div>
                     </button>
                 </div>
+                <div class="header__search">
+                    <div class="header__search-inner">
+                        <input class="header__search-inner-input" type="text" placeholder="искать в каталоге">
+                        <button class="header__search-inner-button">
+                            <div class="header__search-inner-button-arrow-svg">
+                                <svg width="17" height="14" viewBox="0 0 17 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M9.82813 14L16.8281 7L9.82813 2.38419e-07L8.625 1.20313L13.5781 6.14062H0.75V7.85938H13.5781L8.625 12.8125L9.82813 14Z" fill="#E03226"/>
+                                </svg>
+                            </div>
+                        </button>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <main class="main">
+        <section class="hero">
+            <div id="heroCarouselFade" class="carousel slide carousel-fade hero__fade-carousel" data-bs-ride="carousel">
+                <div class="container hero__container">
+                    <div class="hero__fade-carousel-dots">
+                        <svg width="446" height="286" viewBox="0 0 446 286" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g opacity="0.2">
+                                <rect width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" width="6" height="6" rx="3" fill="white"/>
+                                <rect y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="80" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="160" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="240" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="320" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="400" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="80" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="160" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="240" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="40" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="120" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="200" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="40" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="120" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="200" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="280" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="360" y="280" width="6" height="6" rx="3" fill="white"/>
+                                <rect x="440" y="280" width="6" height="6" rx="3" fill="white"/>
+                            </g>
+                        </svg>
+                    </div>
+                    <div class="carousel-indicators hero__fade-carousel-indicators">
+                        <button type="button" data-bs-target="#heroCarouselFade" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#heroCarouselFade" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#heroCarouselFade" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                </div>
+                <div class="carousel-inner hero__fade-carousel-inner">
+                    <div class="carousel-item hero__fade-carousel-item hero__fade-carousel-item-01 active" data-bs-interval="10000000">
+                        <div class="container hero__container">
+                            <div class="hero__fade-carousel-item-inner">
+                                <h1 class="hero__fade-carousel-item-title">
+                                    <span class="hero__fade-carousel-item-title-descr">
+                                        Коллекция 2020 года
+                                    </span>
+                                    Casabella
+                                </h1>
+                                <div class="hero__fade-carousel-item-link">
+                                    <span>
+                                        Скидка 20% до 25 августа
+                                    </span>
+                                    <a href="#">
+                                        <img src="./src/svg/hero__fade-carousel-item-link.svg" alt="Let's button" class="hero__fade-carousel-item-link-img">
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item hero__fade-carousel-item hero__fade-carousel-item-02" data-bs-interval="10000000">
+                        <div class="container hero__container">
+                            <div class="hero__fade-carousel-item-inner">
+                            <h1 class="hero__fade-carousel-item-title">
+                                <span class="hero__fade-carousel-item-title-descr">
+                                    Профессиональная
+                                </span>
+                                Резка керамогранита
+                            </h1>
+                            <div class="hero__fade-carousel-item-link">
+                                <a href="#">
+                                    <img src="./src/svg/hero__fade-carousel-item-link.svg" alt="Let's button" class="hero__fade-carousel-item-link-img">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="carousel-item hero__fade-carousel-item hero__fade-carousel-item-03" data-bs-interval="10000000">
+                        <div class="container hero__container">
+                            <div class="hero__fade-carousel-item-inner">
+                                <h1 class="hero__fade-carousel-item-title">
+                                    Obsidian Moos
+                                </h1>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </section>
+    </main>
+    <script src="./src/scripts/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
