added catalog section

--- a/index.html
+++ b/index.html
@@ -308,6 +308,88 @@
                     </div>
             </div>
         </section>
+        <section class="catalog">
+            <div class="container catalog__container">
+                <div class="catalog__inner">
+                    <a class="catalog__item catalog__item-01" href="#">
+                        <h4 class="catalog__item-text-1 catalog__item-01-text-1">
+                            67 коллекций, 1 478 товаров
+                        </h4>
+                        <h2 class="catalog__item-text-2 catalog__item-01-text-2">
+                            Керамогранит
+                        </h2>
+                    </a>
+                    <a class="catalog__item catalog__item-02" href="#">
+                        <h4 class="catalog__item-text-1 catalog__item-02-text-1">
+                            67 коллекций, 1 478 товаров
+                        </h4>
+                        <h2 class="catalog__item-text-2 catalog__item-02-text-2">
+                            Крупные
+                        </h2>
+                        <span>
+                            форматы
+                        </span>
+                    </a>
+                    <a class="catalog__item catalog__item-03" href="#">
+                        <h4 class="catalog__item-text-1 catalog__item-03-text-1">
+                            67 коллекций, 1 478 товаров
+                        </h4>
+                        <h2 class="catalog__item-text-2 catalog__item-03-text-2">
+                            Керамическая
+                        </h2>
+                        <span>
+                            плитка
+                        </span>
+                    </a>
+                    <a class="catalog__item catalog__item-04" href="#">
+                        <div class="catalog__item-04-inner">
+                            <h4 class="catalog__item-text-1 catalog__item-04-text-1">
+                            </h4>
+                            <h2 class="catalog__item-text-2 catalog__item-04-text-2">
+                                Изготовление специзделий
+                            </h2>
+                        </div>
+                    </a>
+                    <a class="catalog__item catalog__item-05" href="#">
+                        <img class="catalog__item-05-img" src="./src/img/catalog/catalog__item-img-05.jpg" alt="Catalog Item 05 Img">
+                        <div class="catalog__item-05-inner">
+                            <h4 class="catalog__item-text-1 catalog__item-05-text-1">
+                                1 478 товаров
+                            </h4>
+                            <h2 class="catalog__item-text-2 catalog__item-05-text-2">
+                                Обои
+                            </h2>
+                        </div>
+                    </a>
+                    <div class="catalog__item catalog__item-06" href="#">
+                        <div class="catalog__item-06-inner">
+                            <h4 class="catalog__item-text-1 catalog__item-06-text-1">
+                                смотрите также:
+                            </h4>
+                            <div class="catalog__item-text-2 catalog__item-06-text-2">
+                                <ul>
+                                    <li>
+                                        <a href="#">
+                                            Сухие смеси
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            Лакокрасочные изделия
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            Багет
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="./src/scripts/bootstrap/js/bootstrap.min.js"></script>
 </body>
